Update the save to files